# visualai-rendering-engine

./: .env.example  .gitignore  README-en.md  STEP1_DEBT.md  VisualAI by NexCognit — Master Product Specification.md  pyproject.toml  requirements.txt
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
app/: asgi.py  router.py
app/middleware/: jwt_auth.py
app/models/: schema.py
app/services/: lip_sync.py  llm.py  material.py  nanobanana.py  shutterstock.py  task.py  video.py  voice.py
app/utils/: utils.py
docs/: setup-rtx-wsl2.md
resource/fonts/: GeezaPro.ttc
scripts/: install_musetalk.sh
specs/001-nexcognit-ui-style/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-video-duration-variations/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-admin-credit-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-neon-jira-github-ops/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/005-settings-menu/: spec.md
specs/006-user-uploaded-assets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-nexcognit-brand-skill/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/008-nexcognit-credit-gating/: spec.md
specs/009-brand-overlays/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-music-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-bgm-audit-warning/: spec.md
specs/012-url-scraping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-script-polish-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test/: conftest.py
(+139 files in other folders)
